fix: JDK17 compat - replace Thread.threadId() with getId() in TransactionContext
Introduced by cherry-pick of e95e4dcb01f0f113e4f701cf1b17ad5ada29719d
(fix: [#4529] ConcurrentModificationException on commit when
background index compaction migrates a file). Thread.threadId() is a
JDK21+ API; the java17 branch targets Java 17.